# diabetes-prediction-model

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  diabetes_prediction_model.py  docker-compose.yaml  extract_data.py  pyproject.toml  run_experiment.py
data/: diabetes_int_train.parquet  diabetes_int_valid.parquet
infrastructure/s3/: global.hcl  terragrunt.hcl
infrastructure/s3/prd/: account.hcl
infrastructure/s3/stg/: account.hcl
integration-tests/: run.sh
tests/: model_test.py
