[tool.poetry]
name = "diabetes-prediction-model"
version = "0.1.0"
description = ""
authors = ["Vladimir Zhelanov <zhelanov.va@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scikit-learn = "==1.4.2"
pandas = "==2.2.2"
pyarrow = "==15.0.2"
s3fs = "==2024.6.1"
boto3 = "==1.34.131"
mlflow = "==2.14.2"
prefect = "==2.19.8"

[tool.poetry.group.test.dependencies]
pytest = "*"

[tool.poetry.group.dev.dependencies]
pylint = "==3.2.5"
black = "==24.4.2"
isort = "==5.13.2"
pre-commit = "==3.7.1"

[tool.pylint.messages_control]
disable = [
  "missing-function-docstring",
  "missing-final-newline",
  "missing-class-docstring",
  "missing-module-docstring",
  "invalid-name",
  "too-few-public-methods",
  "line-too-long",
  "no-else-return",
  "inconsistent-return-statements",
  "redefined-outer-name"
]

[tool.black]
line-length = 120
target-version = ['py312']
skip-string-normalization = true

[tool.isort]
multi_line_output = 0
length_sort = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
